--- a/index.xhtml
+++ b/index.xhtml
@@ -2,12 +2,15 @@
     <head>
         <style>
             #sandbox { display: none; }
+            #results { list-style: none; }
+            summary { cursor: pointer; }
+            .book-status { color: #888; }
         </style>
         <script src="./app.js"></script>
     </head>
     <body>
         <h1>Bulk Content Search</h1>
-        <p>This searches most of our books for content by loading the books in your browser. It's slow but it does not really require maintenance</p>
+        <p>This searches most of our books (<span id="book-count"></span>) for content by loading the books in your browser. It's slow but it does not really require maintenance</p>
         <input id="selector" type="text" placeholder="CSS Selector"/>
         <button id="start">Start</button>
         <button id="stop" disabled="disabled">Stop</button>
