--- a/index.xhtml
+++ b/index.xhtml
@@ -8,6 +8,7 @@
             #results { list-style: none; }
             summary { cursor: pointer; }
             .book-status { color: #888; }
+            .found-matches { font-weight: bold; }
         </style>
         <script src="./app.js"></script>
         <script>
