--- a/index.xhtml
+++ b/index.xhtml
@@ -22,7 +22,7 @@
     </head>
     <body>
         <h1>Bulk Content Search</h1>
-        <p>This searches most of our books (<span id="book-count"></span>) for content by loading the books in your browser. It's slow but it does not really require maintenance</p>
+        <p>This searches most of our books (<span id="book-count"></span>) for content by loading the books in your browser. The first time is slow but once the books are loaded searches are really fast.</p>
         <input id="selector" type="text" placeholder="CSS Selector"/>
         <button id="start">Start</button>
         <button id="stop" disabled="disabled">Stop</button>
