--- a/index.xhtml
+++ b/index.xhtml
@@ -22,6 +22,7 @@
     <body>
         <h1>Bulk Content Search</h1>
         <p>This searches most of our books (<span id="book-count"></span>) for content by loading the books in your browser. The first time is slow but once the books are loaded searches are really fast.</p>
+        <p><a href="https://github.com/openstax/sifter">Source</a></p>
         <input id="selector" type="text" placeholder="CSS Selector"/>
         <button id="start">Start</button>
         <button id="stop" disabled="disabled">Stop</button>
