--- a/index.xhtml
+++ b/index.xhtml
@@ -33,15 +33,16 @@
     <body>
         <h1>Bulk Content Search</h1>
         <p>This searches most of our books (<span id="book-count"></span>) for content by loading the books in your browser. The first time is slow but once the books are loaded searches are really fast.</p>
-        <p><a href="https://github.com/openstax/sifter">Source</a></p>
-        <form>
-            <input id="selector" placeholder="CSS or XPath (//h:*) Selector"/>
-            <button id="start">Start</button>
+        <p><a href="https://github.com/openstax/sifter">Source</a>. <a href="./help">Help</a></p>
+        <form method="GET">
+            <input type="hidden" name="v" value="1"/>
+            <input name="q" id="selector" placeholder="CSS or XPath (//h:*) Selector"/>
+            <button type="submit" id="start">Start</button>
             <button id="stop" disabled="disabled">Stop</button>
             <button id="skip" disabled="disabled">Skip</button>
             <br/>
             <label for="stop-after-one">Stop after one is found:</label>
-            <input id="stop-after-one" type="checkbox" checked="checked"/>
+            <input name="one" id="stop-after-one" type="checkbox" checked="checked"/>
             <br/>
             <label for="advanced-toggle">Run custom JavaScript for each Book/Page</label>
             <input id="advanced-toggle" type="checkbox"/>
@@ -56,10 +57,16 @@
                 </ul>
                 <label for="analyze-code">Extra JS to run:</label>
                 <br/>
-                <textarea id="analyze-code" cols="80" rows="10"></textarea>
+                <textarea name="code" id="analyze-code" cols="80" rows="10"></textarea>
             </div>
+            <ul>
+                <li><input type="radio" id="use-xhtml" name="sourceFormat" value="xhtml"/><label for="use-xhtml">Search XHTML</label></li>
+                <li><input type="radio" id="use-cnxml" name="sourceFormat" value="cnxml"/><label for="use-cnxml">Search CNXML</label></li>
+            </ul>
         </form>
         <ul id="results"></ul>
         <div id="sandbox"></div>
     </body>
 </html>
+
+
