--- a/index.xhtml
+++ b/index.xhtml
@@ -33,7 +33,7 @@
     <body>
         <h1>Bulk Content Search</h1>
         <p>This searches most of our books (<span id="book-count"></span>) for content by loading the books in your browser. The first time is slow but once the books are loaded searches are really fast.</p>
-        <p><a href="https://github.com/openstax/sifter">Source</a>. <a href="./help">Help</a></p>
+        <p><a target="_blank" href="https://github.com/openstax/sifter">Source</a>. <a target="_blank" href="./help">Help</a></p>
         <form method="GET">
             <input type="hidden" name="v" value="1"/>
             <input name="q" id="selector" placeholder="CSS or XPath (//h:*) Selector"/>
