remove the "stop after one" from the shared state

--- a/index.xhtml
+++ b/index.xhtml
@@ -41,8 +41,8 @@
             <button id="stop" disabled="disabled">Stop</button>
             <button id="skip" disabled="disabled">Skip</button>
             <br/>
-            <label for="stop-after-one">Stop after one is found:</label>
-            <input name="one" id="stop-after-one" type="checkbox" checked="checked"/>
+            <label for="stop-after-one">Stop after one is found (faster):</label>
+            <input id="stop-after-one" type="checkbox" />
             <br/>
             <label for="advanced-toggle">Run custom JavaScript for each Book/Page</label>
             <input id="advanced-toggle" type="checkbox"/>
