stop after N pages have been searched

--- a/index.xhtml
+++ b/index.xhtml
@@ -44,6 +44,9 @@
             <label for="stop-after-one">Stop after one is found (faster):</label>
             <input id="stop-after-one" type="checkbox" />
             <br/>
+            <label for="stop-after-n-pages">Stop after the first N pages (faster):</label>
+            <input id="stop-after-n-pages" type="number" />
+            <br/>
             <label for="advanced-toggle">Run custom JavaScript for each Book/Page</label>
             <input id="advanced-toggle" type="checkbox"/>
             <div id="advanced-area">
