Simplify code since archive is not supported

--- a/index.xhtml
+++ b/index.xhtml
@@ -76,7 +76,9 @@
         </ul>
         <label for="books">Books to search:</label>
         <br/>
-        <select id="books" name="books" multiple="multiple" class="col-sm-8" size="15"></select>
+        <select id="books" name="books" multiple="multiple" class="col-sm-8" size="15">
+            <option disabled="disabled">Loading... hopefully</option>
+        </select>
     </form>
     <h4 class="search-not-started" id="resultsLabel">Results</h4>
     <ul id="results"></ul>
